# khangman

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.developer  README.languages  README.packagers  README_packagers  REUSE.toml  TODO  add_language  khangman.appdata.xml  khangman.kdevprj  khangman.lsm  org.kde.khangman.appdata.xml  snapcraft.yaml
.reuse/: dep5
data/: CMakeLists.txt  animals.kvtml  easy.kvtml  hard.kvtml  (+1 more)
icons/: CMakeLists.txt  oxsc-apps-khangman.svgz  sc-apps-khangman.svgz
icons/scalable/: hisc-app-khangman-mobile.svgz
khangman/: CMakeLists.txt  Makefile.am  Messages.sh  advanced.ui  crsc-app-khangman.svgz  easy.txt  fontchecker.cpp  fontchecker.h  generalui.ui  info.cpp  info.h  infodlg.ui  khangman.cpp  khangman.desktop  khangman.h  khangman.kcfg  khangman_client.cpp  khangmanrc  khangmanui.rc  khangmanview.cpp  khangmanview.h  khmtheme.cpp  khmtheme.h  khnewstuff.cpp  khnewstuff.h  khsplash.cpp  khsplash.h  languageui.ui  langutils.cpp  langutils.h  level3.txt  level4.txt  main.cpp  mainw.ui  normal.ui  pref.cpp  pref.h  pref1ui.ui  pref2ui.ui  prefs.kcfgc  (+5 more)
khangman/data/: CMakeLists.txt  Makefile.am
khangman/data/ca/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/cs/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/da/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/de/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/en/: CMakeLists.txt  Makefile.am  animals.kvtml  animals.txt  easy.kvtml  easy.txt  medium.kvtml  medium.txt
khangman/data/es/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/fi/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/fr/: Makefile.am  animals.txt  easy.txt  hard.txt  maison.txt  medium.txt
khangman/data/it/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/langs/: Makefile.am  ca.txt  cs.txt  da.txt  fr.txt  nb.txt  nn.txt  tg.txt
khangman/data/nb/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/nl/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/nn/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/pt/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/pt_BR/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/ru/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/data/sp/: animals.txt  hard.txt  medium.txt
khangman/data/sv/: Makefile.am  animals.txt  easy.txt  hard.txt  medium.txt
khangman/fonts/: Makefile.am  licenseDomesticManners.txt  licenseDustimo.txt
khangman/icons/: Makefile.am  crsc-app-khangman.svgz
khangman/pics/: CMakeLists.txt  Makefile.am
khangman/pics/desert/: CMakeLists.txt  Makefile.am
khangman/pics/sea/: CMakeLists.txt  Makefile.am
khangman/sounds/: CMakeLists.txt  Makefile.am
languages/: CMakeLists.txt
languages/ca/: CMakeLists.txt  ca.txt
languages/cs/: CMakeLists.txt  cs.txt
languages/da/: CMakeLists.txt
languages/de/: CMakeLists.txt
languages/el/: CMakeLists.txt  el.txt
languages/eo/: CMakeLists.txt  eo.txt
languages/es/: CMakeLists.txt  es.txt
languages/et/: CMakeLists.txt  et.txt
languages/fi/: CMakeLists.txt  fi.txt
languages/fr/: CMakeLists.txt  fr.txt
languages/ga/: CMakeLists.txt  ga.txt
languages/gl/: CMakeLists.txt  gl.txt
languages/hu/: CMakeLists.txt  hu.txt
languages/nb/: CMakeLists.txt
languages/nds/: CMakeLists.txt  nds.txt
languages/nn/: CMakeLists.txt  nn.txt
languages/pl/: CMakeLists.txt  pl.txt
languages/pt/: CMakeLists.txt  pt.txt
languages/pt_BR/: CMakeLists.txt
languages/ru/: CMakeLists.txt
languages/sk/: CMakeLists.txt  sk.txt
languages/sl/: CMakeLists.txt  sl.txt
languages/sr@ijekavianlatin/: CMakeLists.txt
languages/sr@latin/: CMakeLists.txt  sr@latin.txt
languages/sv/: CMakeLists.txt  sv.txt
languages/tg/: CMakeLists.txt
languages/tr/: CMakeLists.txt  tr.txt
languages/uk/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  advanced.ui  data.i18n  fontchecker.cpp  fontchecker.h  generalui.ui  khangman.cpp  khangman.desktop  khangman.h  khangman.kcfg  khangman.knsrc  khangman.rc  khangmanengine.cpp  khangmanengine.h  khangmanenginehelper.cpp  khangmanenginehelper.h  khangmanui.rc  khangmanview.cpp  khangmanview.h  khmtheme.cpp  khmtheme.h  khmthemefactory.cpp  khmthemefactory.h  khnewstuff.cpp  languageui.ui  langutils.cpp  langutils.h  main.cpp  org.kde.khangman.desktop  prefs.kcfgc  rc.cpp  standardthemes.xml  timer.cpp  timer.h  timerui.ui  version.h
src/desktop/: CMakeLists.txt  Messages.sh  khangman.cpp  khangman.desktop  khangman.h  khangmanview.cpp  khangmanview.h  khmthemefactory.cpp  khmthemefactory.h  langutils.cpp  main.cpp  prefs.kcfgc  timer.cpp  timer.h  version.h
src/engine/: CMakeLists.txt  khangman.kcfg  khangman.knsrc  khangmanengine.cpp  khangmanengine.h  prefs.kcfgc
src/engine/cmake/: FindKHangManEngine.cmake
src/engine/harmattan/: khangman.kcfg  prefs.kcfgc
src/harmattan/: CMakeLists.txt  GamePage.qml  LetterElement.qml  ListItem.qml  MainPage.qml  MainSettingsPage.qml  MySelectionDialog.qml  khangman-harmattan.desktop  khangman-harmattan.qrc  khangman.conf  khangman.sh  khangman_engine_export.h  khangmanengine.cpp  khangmanengine.h  khangmanenginehelper.cpp  khangmanenginehelper.h  main.cpp  main.qml
src/plasma-active/: CMakeLists.txt  khangman-active.desktop
src/plasma-active/package/: metadata.desktop
src/plasma-active/package/contents/ui/: main.qml
src/plasma-active/src/: CMakeLists.txt  kdeclarativemainwindow.cpp  kdeclarativeview.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/qml/: CMakeLists.txt  CommonDialog.qml  GamePage.qml  LetterElement.qml  ListItem.qml  Main.qml  MainPage.qml  MainSettingsDialog.qml  MainSettingsPage.qml  MySelectionDialog.qml  SelectionDialog.qml  main.qml
src/qml/Settings/: SettingsPage.qml
src/qml/sounds/: CMakeLists.txt
(+132 files in other folders)
