####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = khangman po doc 

EXTRA_DIST = khangman.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO khangman.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

