####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = khangman 

EXTRA_DIST = TODO README AUTHORS khangman.lsm INSTALL ChangeLog COPYING khangman.kdevprj 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

include ../admin/Doxyfile.am

