####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = khm_splash.png hg10.jpg hg12.jpg hg13.jpg hg14.jpg hg1.jpg hg2.jpg hg3.jpg hg4.jpg hg5.jpg hg6.jpg hg7.jpg hg8.jpg hg9.jpg c_bg.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/khm_splash.png $(kde_datadir)/khangman/pics/khm_splash.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg10.jpg $(kde_datadir)/khangman/pics/hg10.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg12.jpg $(kde_datadir)/khangman/pics/hg12.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg13.jpg $(kde_datadir)/khangman/pics/hg13.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg14.jpg $(kde_datadir)/khangman/pics/hg14.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg1.jpg $(kde_datadir)/khangman/pics/hg1.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg2.jpg $(kde_datadir)/khangman/pics/hg2.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg3.jpg $(kde_datadir)/khangman/pics/hg3.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg4.jpg $(kde_datadir)/khangman/pics/hg4.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg5.jpg $(kde_datadir)/khangman/pics/hg5.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg6.jpg $(kde_datadir)/khangman/pics/hg6.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg7.jpg $(kde_datadir)/khangman/pics/hg7.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg8.jpg $(kde_datadir)/khangman/pics/hg8.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg9.jpg $(kde_datadir)/khangman/pics/hg9.jpg
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/c_bg.png $(kde_datadir)/khangman/pics/c_bg.png

uninstall-local:
	-rm -f $(kde_datadir)/khangman/pics/khm_splash.png
	-rm -f $(kde_datadir)/khangman/pics/hg10.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg12.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg13.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg14.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg1.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg2.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg3.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg4.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg5.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg6.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg7.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg8.jpg
	-rm -f $(kde_datadir)/khangman/pics/hg9.jpg
	-rm -f $(kde_datadir)/khangman/pics/c_bg.png

####### kdevelop will overwrite this part!!! (end)############
