
EXTRA_DIST = hg10.png hg12.png hg1.png hg2.png hg3.png hg4.png hg5.png hg6.png hg7.png hg8.png hg9.png blue.png nature.png

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg10.png $(kde_datadir)/khangman/pics/hg10.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg12.png $(kde_datadir)/khangman/pics/hg12.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg1.png $(kde_datadir)/khangman/pics/hg1.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg2.png $(kde_datadir)/khangman/pics/hg2.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg3.png $(kde_datadir)/khangman/pics/hg3.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg4.png $(kde_datadir)/khangman/pics/hg4.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg5.png $(kde_datadir)/khangman/pics/hg5.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg6.png $(kde_datadir)/khangman/pics/hg6.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg7.png $(kde_datadir)/khangman/pics/hg7.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg8.png $(kde_datadir)/khangman/pics/hg8.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/hg9.png $(kde_datadir)/khangman/pics/hg9.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/blue.png $(kde_datadir)/khangman/pics/blue.png
	$(mkinstalldirs) $(kde_datadir)/khangman/pics/
	$(INSTALL_DATA) $(srcdir)/nature.png $(kde_datadir)/khangman/pics/nature.png

uninstall-local:
	-rm -f $(kde_datadir)/khangman/pics/hg10.png
	-rm -f $(kde_datadir)/khangman/pics/hg12.png
	-rm -f $(kde_datadir)/khangman/pics/hg1.png
	-rm -f $(kde_datadir)/khangman/pics/hg2.png
	-rm -f $(kde_datadir)/khangman/pics/hg3.png
	-rm -f $(kde_datadir)/khangman/pics/hg4.png
	-rm -f $(kde_datadir)/khangman/pics/hg5.png
	-rm -f $(kde_datadir)/khangman/pics/hg6.png
	-rm -f $(kde_datadir)/khangman/pics/hg7.png
	-rm -f $(kde_datadir)/khangman/pics/hg8.png
	-rm -f $(kde_datadir)/khangman/pics/hg9.png
	-rm -f $(kde_datadir)/khangman/pics/blue.png
	-rm -f $(kde_datadir)/khangman/pics/nature.png


