picsdir = $(kde_datadir)/khangman/pics
pics_DATA = hg10.png hg10c.png hg12.png hg1.png hg2.png hg3.png hg4.png hg5.png hg6.png hg7.png hg7c.png hg8.png hg8c.png hg9.png hg9c.png blue.png nature.png
EXTRA_DIST = $(pics_DATA)

icons_DATA = a_acute.png a_tilde.png a_grave.png a_withe.png a_circle.png a_umlaut.png c_caron.png c_cedil.png d_apos.png e_acute.png e_caron.png e_grave.png e_circ.png i_acute.png i_grave.png n_caron.png n_tilde.png o_grave.png o_acute.png o_circ.png o_cross.png o_umlaut.png o_tilde.png r_caron.png s_caron.png u_umlaut.png u_acute.png u_dot.png sz_lig.png y_acute.png z_caron.png
iconsdir = $(kde_icondir)/hicolor/48x48/apps