



########### install files ###############

install( FILES new_game.ogg EW_Dialogue_Appear.ogg  DESTINATION  ${DATA_INSTALL_DIR}/khangman/sounds )




#original Makefile.am contents follow:

#soundsdir = $(kde_datadir)/khangman/sounds
#sounds_DATA = new_game.ogg EW_Dialogue_Appear.ogg
#EXTRA_DIST = $(sounds_DATA)
